// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar [NEGATIVE] should render with invalid screen width 1`] = `
.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c8:hover {
  cursor: pointer;
}

.c4 {
  border-radius: 1.5625rem;
  height: 2.5rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
}

.c4:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c4:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

.c1 {
  display: inline-block;
  position: static;
}

.c14 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c0 {
  position: relative;
  height: 100%;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  border-right: 0.0625rem solid #F7F8FA;
  -webkit-transition: border 150ms cubic-bezier(0.45,0.05,0,1);
  transition: border 150ms cubic-bezier(0.45,0.05,0,1);
  padding-bottom: 0.875rem;
}

.c2 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
}

.c16 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  padding: 1rem;
  margin-bottom: 1.25rem;
}

.c3:hover {
  cursor: pointer;
}

.c3:hover .c5 {
  box-shadow: 0 0.5rem 0.625rem 0.125rem 0 rgba(0,0,0,0.12);
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  word-break: break-word;
  display: none;
  color: #474747;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 0.25rem;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #2D2D2D !important;
  margin-bottom: 0.9375rem;
}

.c17 svg {
  fill: #808080;
}

.c18 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  margin-bottom: 0.5rem;
  display: none;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c7 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  overflow: auto;
  position: relative;
}

.c11 {
  position: relative;
  z-index: 1000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0rem;
}

.c13 {
  position: relative;
  z-index: 1000;
  margin: 0;
  display: none;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  overflow: hidden;
  text-align: center;
  z-index: 0;
}

.c10 {
  padding: 1rem;
  height: 2.5rem;
  margin-bottom: 0.5rem;
  color: #808080 !important;
}

.c10 svg {
  fill: #808080;
}

.c10:hover {
  cursor: pointer;
  background-color: #ECF1FC;
  color: #4475E3 !important;
}

.c10:hover svg {
  fill: #4475E3;
}

.c10::before {
  content: '';
  height: 2rem;
  width: 0.25rem;
  border-radius: 0.125rem 0rem 0rem 0.125rem;
  position: absolute;
  left: 5.25rem;
  background-color: #4475E3;
  color: #4475E3;
  z-index: 100;
  display: none;
}

.c10 > .c12 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
}

.c15 {
  margin-top: auto;
}

<body>
  <div>
    <div
      class="c0"
      id="sidebar"
      style="width: 5.5rem; padding-top: 0.5rem;"
    >
      <span
        class="c1"
        data-testid="tooltip-container"
      />
      <div
        class="c2 c3"
      >
        <div
          class="c4 c5 "
          color="disabled"
        >
          <svg
            data-testid="avatar-icon"
            fill="#DBDBDB"
          />
        </div>
        <div
          class="c6"
        />
      </div>
      <div
        class="c7"
      >
        <a
          class="c8"
          href="/overview"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Overview
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/dashboard"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Dashboard
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/task-management"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Task
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/subject-management"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Subject
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/study-data"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Study Data
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/educational-management"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Education
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/lab-visit"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              In Lab Visit
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/study-settings"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Study Settings
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/data-statistics"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Data Statistics
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
      </div>
      <div
        class="c15"
      >
        <div
          class="c7"
        >
          <div
            class="c9 c10"
            data-testid="user-profile-signout-action"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Sign out
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </div>
        <div
          class="c16 c17"
        >
          <div
            class="c18"
          />
          <svg />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Sidebar should render 1`] = `
.c13 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c13:hover {
  cursor: pointer;
}

.c8 {
  border-radius: 1.5625rem;
  height: 2.5rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
}

.c8:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c8:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

.c1 {
  display: inline-block;
  position: static;
}

.c5 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c2 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 1.5rem;
  width: 1.5rem;
  border: none;
  background-color: transparent;
}

.c2:hover {
  cursor: pointer;
}

.c2 > div {
  color: #4475E3;
}

.c2 > div svg {
  fill: #4475E3;
}

.c2:hover:enabled > div {
  color: #2F65E0;
}

.c2:hover:enabled > div svg {
  fill: #2F65E0;
}

.c2:hover:enabled:active > div {
  color: #2057D5;
}

.c2:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c2:disabled > div {
  color: #B3C6F1;
}

.c2:disabled > div svg {
  fill: #B3C6F1;
}

.c2:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c2:focus-visible > div {
  color: #4475E3;
}

.c2:focus-visible > div svg {
  fill: #4475E3;
}

.c2:hover:enabled {
  background-color: #ECF1FC;
}

.c2:hover:enabled:active > div {
  color: #2057D5;
}

.c2:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c2:focus-visible:enabled {
  background-color: #C7D6F7;
  outline: none;
}

.c4 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c0 {
  position: relative;
  height: 100%;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  border-right: 0.0625rem solid #F7F8FA;
  -webkit-transition: border 150ms cubic-bezier(0.45,0.05,0,1);
  transition: border 150ms cubic-bezier(0.45,0.05,0,1);
  padding-bottom: 0.875rem;
}

.c6 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
}

.c20 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 0;
}

.c10 {
  margin-right: 1rem;
}

.c3 {
  position: absolute !important;
  z-index: 1100;
  background-color: #F6F8FE;
  top: -62.5rem;
  left: -62.5rem;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
  margin-bottom: 2.375rem;
}

.c7:hover {
  cursor: pointer;
}

.c7:hover .c9 {
  box-shadow: 0 0.5rem 0.625rem 0.125rem 0 rgba(0,0,0,0.12);
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  margin-top: 0.125rem;
  word-break: break-word;
  display: block;
  color: #474747;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 1rem;
  position: relative;
  overflow: hidden;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 0.25rem;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #2D2D2D !important;
  margin-bottom: 0.9375rem;
}

.c21 svg {
  fill: #808080;
}

.c22 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  margin-bottom: 0.5rem;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c23 {
  white-space: pre;
}

.c12 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  overflow: auto;
  position: relative;
}

.c16 {
  position: relative;
  z-index: 1000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0.5rem;
}

.c18 {
  position: relative;
  z-index: 1000;
  margin: 0;
  display: block;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  z-index: 0;
}

.c15 {
  padding: 1rem;
  height: 2.5rem;
  margin-bottom: 0.5rem;
  color: #808080 !important;
}

.c15 svg {
  fill: #808080;
}

.c15:hover {
  cursor: pointer;
  background-color: #ECF1FC;
  color: #4475E3 !important;
}

.c15:hover svg {
  fill: #4475E3;
}

.c15::before {
  content: '';
  height: 2rem;
  width: 0.25rem;
  border-radius: 0.125rem 0rem 0rem 0.125rem;
  position: absolute;
  left: 11.75rem;
  background-color: #4475E3;
  color: #4475E3;
  z-index: 100;
  display: none;
}

.c15 > .c17 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
}

.c19 {
  margin-top: auto;
}

<body>
  <div>
    <div
      class="c0"
      id="sidebar"
      style="width: 12rem; padding-top: 1.625rem;"
    >
      <span
        class="c1"
        data-testid="tooltip-container"
      />
      <button
        aria-label="Resize"
        class="c2 c3"
        data-testid="resize-button"
        fill="text"
        style="overflow: hidden; position: relative;"
      >
        <div
          class="c4"
          data-testid="content"
        >
          <svg />
        </div>
        <div
          class="c5"
          color="primaryLightPressed"
          opacity="1,1"
          scale="0"
          style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
        />
      </button>
      <div
        class="c6 c7"
      >
        <div
          class="c8 c9 c10"
          color="disabled"
        >
          <svg
            data-testid="avatar-icon"
            fill="#DBDBDB"
          />
        </div>
        <div
          class="c11"
        />
      </div>
      <div
        class="c12"
      >
        <a
          class="c13"
          href="/overview"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Overview
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/dashboard"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Dashboard
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/task-management"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Task
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/subject-management"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Subject
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/study-data"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Study Data
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/educational-management"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Education
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/lab-visit"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              In Lab Visit
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/study-settings"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Study Settings
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/data-statistics"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Data Statistics
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
      </div>
      <div
        class="c19"
      >
        <div
          class="c12"
        >
          <div
            class="c14 c15"
            data-testid="user-profile-signout-action"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Sign out
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </div>
        <div
          class="c20 c21"
        >
          <div
            class="c22"
          />
          <div
            class="c23"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Sidebar should render with desktop type 1`] = `
.c13 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c13:hover {
  cursor: pointer;
}

.c8 {
  border-radius: 1.5625rem;
  height: 2.5rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
}

.c8:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c8:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

.c1 {
  display: inline-block;
  position: static;
}

.c5 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c2 {
  position: relative;
  z-index: 0;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 1.5rem;
  width: 1.5rem;
  border: none;
  background-color: transparent;
}

.c2:hover {
  cursor: pointer;
}

.c2 > div {
  color: #4475E3;
}

.c2 > div svg {
  fill: #4475E3;
}

.c2:hover:enabled > div {
  color: #2F65E0;
}

.c2:hover:enabled > div svg {
  fill: #2F65E0;
}

.c2:hover:enabled:active > div {
  color: #2057D5;
}

.c2:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c2:disabled > div {
  color: #B3C6F1;
}

.c2:disabled > div svg {
  fill: #B3C6F1;
}

.c2:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c2:focus-visible > div {
  color: #4475E3;
}

.c2:focus-visible > div svg {
  fill: #4475E3;
}

.c2:hover:enabled {
  background-color: #ECF1FC;
}

.c2:hover:enabled:active > div {
  color: #2057D5;
}

.c2:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c2:focus-visible:enabled {
  background-color: #C7D6F7;
  outline: none;
}

.c4 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

.c0 {
  position: relative;
  height: 100%;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  border-right: 0.0625rem solid #F7F8FA;
  -webkit-transition: border 150ms cubic-bezier(0.45,0.05,0,1);
  transition: border 150ms cubic-bezier(0.45,0.05,0,1);
  padding-bottom: 0.875rem;
}

.c6 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
}

.c20 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 0;
}

.c10 {
  margin-right: 1rem;
}

.c3 {
  position: absolute !important;
  z-index: 1100;
  background-color: #F6F8FE;
  top: -62.5rem;
  left: -62.5rem;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1rem;
  margin-bottom: 2.375rem;
}

.c7:hover {
  cursor: pointer;
}

.c7:hover .c9 {
  box-shadow: 0 0.5rem 0.625rem 0.125rem 0 rgba(0,0,0,0.12);
}

.c11 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  margin-top: 0.125rem;
  word-break: break-word;
  display: block;
  color: #474747;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 1rem;
  position: relative;
  overflow: hidden;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 0.25rem;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #2D2D2D !important;
  margin-bottom: 0.9375rem;
}

.c21 svg {
  fill: #808080;
}

.c22 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  margin-bottom: 0.5rem;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c23 {
  white-space: pre;
}

.c12 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  overflow: auto;
  position: relative;
}

.c16 {
  position: relative;
  z-index: 1000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0.5rem;
}

.c18 {
  position: relative;
  z-index: 1000;
  margin: 0;
  display: block;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  z-index: 0;
}

.c15 {
  padding: 1rem;
  height: 2.5rem;
  margin-bottom: 0.5rem;
  color: #808080 !important;
}

.c15 svg {
  fill: #808080;
}

.c15:hover {
  cursor: pointer;
  background-color: #ECF1FC;
  color: #4475E3 !important;
}

.c15:hover svg {
  fill: #4475E3;
}

.c15::before {
  content: '';
  height: 2rem;
  width: 0.25rem;
  border-radius: 0.125rem 0rem 0rem 0.125rem;
  position: absolute;
  left: 11.75rem;
  background-color: #4475E3;
  color: #4475E3;
  z-index: 100;
  display: none;
}

.c15 > .c17 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
}

.c19 {
  margin-top: auto;
}

<body>
  <div>
    <div
      class="c0"
      id="sidebar"
      style="width: 12rem; padding-top: 1.625rem;"
    >
      <span
        class="c1"
        data-testid="tooltip-container"
      />
      <button
        aria-label="Resize"
        class="c2 c3"
        data-testid="resize-button"
        fill="text"
        style="overflow: hidden; position: relative;"
      >
        <div
          class="c4"
          data-testid="content"
        >
          <svg />
        </div>
        <div
          class="c5"
          color="primaryLightPressed"
          opacity="1,1"
          scale="0"
          style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
        />
      </button>
      <div
        class="c6 c7"
      >
        <div
          class="c8 c9 c10"
          color="disabled"
        >
          <svg
            data-testid="avatar-icon"
            fill="#DBDBDB"
          />
        </div>
        <div
          class="c11"
        />
      </div>
      <div
        class="c12"
      >
        <a
          class="c13"
          href="/overview"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Overview
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/dashboard"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Dashboard
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/task-management"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Task
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/subject-management"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Subject
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/study-data"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Study Data
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/educational-management"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Education
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/lab-visit"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              In Lab Visit
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/study-settings"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Study Settings
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c13"
          href="/data-statistics"
        >
          <div
            class="c14 c15"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Data Statistics
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
      </div>
      <div
        class="c19"
      >
        <div
          class="c12"
        >
          <div
            class="c14 c15"
            data-testid="user-profile-signout-action"
          >
            <div
              class="c16"
            >
              <svg />
            </div>
            <p
              class="c17 c18"
            >
              Sign out
            </p>
            <div
              class="c5"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </div>
        <div
          class="c20 c21"
        >
          <div
            class="c22"
          />
          <div
            class="c23"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Sidebar should render with laptop type 1`] = `
.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: default;
  -webkit-user-drag: none;
}

.c8:hover {
  cursor: pointer;
}

.c4 {
  border-radius: 1.5625rem;
  height: 2.5rem;
  -webkit-transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  transition: opacity 300ms cubic-bezier(0.45,0.05,0,1);
  position: relative;
  background-color: transparent !important;
  opacity: 1;
}

.c4:hover {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
}

.c4:hover:active {
  opacity: 1;
  box-shadow: 0 0.9375rem 1.25rem rgba(180,180,180,0.3);
  cursor: pointer;
  -webkit-filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
  filter: drop-shadow(0 0.9375rem 1.25rem rgba(180,180,180,0.3));
}

.c1 {
  display: inline-block;
  position: static;
}

.c14 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c0 {
  position: relative;
  height: 100%;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  border-right: 0.0625rem solid #F7F8FA;
  -webkit-transition: border 150ms cubic-bezier(0.45,0.05,0,1);
  transition: border 150ms cubic-bezier(0.45,0.05,0,1);
  padding-bottom: 0.875rem;
}

.c2 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 1;
}

.c16 {
  -webkit-transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  transition: opacity 0.3s cubic-bezier(0.45,0.05,0,1);
  opacity: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  padding: 1rem;
  margin-bottom: 1.25rem;
}

.c3:hover {
  cursor: pointer;
}

.c3:hover .c5 {
  box-shadow: 0 0.5rem 0.625rem 0.125rem 0 rgba(0,0,0,0.12);
}

.c6 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  word-break: break-word;
  display: none;
  color: #474747;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  overflow: hidden;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 0.25rem;
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
  color: #2D2D2D !important;
  margin-bottom: 0.9375rem;
}

.c17 svg {
  fill: #808080;
}

.c18 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 600;
  font-style: normal;
  margin-bottom: 0.5rem;
  display: none;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.c7 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  overflow: auto;
  position: relative;
}

.c11 {
  position: relative;
  z-index: 1000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 0rem;
}

.c13 {
  position: relative;
  z-index: 1000;
  margin: 0;
  display: none;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  overflow: hidden;
  text-align: center;
  z-index: 0;
}

.c10 {
  padding: 1rem;
  height: 2.5rem;
  margin-bottom: 0.5rem;
  color: #808080 !important;
}

.c10 svg {
  fill: #808080;
}

.c10:hover {
  cursor: pointer;
  background-color: #ECF1FC;
  color: #4475E3 !important;
}

.c10:hover svg {
  fill: #4475E3;
}

.c10::before {
  content: '';
  height: 2rem;
  width: 0.25rem;
  border-radius: 0.125rem 0rem 0rem 0.125rem;
  position: absolute;
  left: 5.25rem;
  background-color: #4475E3;
  color: #4475E3;
  z-index: 100;
  display: none;
}

.c10 > .c12 {
  font-family: Inter,sans-serif;
  font-size: 0.75rem;
  line-height: 1.125rem;
  font-weight: 400;
  font-style: normal;
}

.c15 {
  margin-top: auto;
}

<body>
  <div>
    <div
      class="c0"
      id="sidebar"
      style="width: 5.5rem; padding-top: 0.5rem;"
    >
      <span
        class="c1"
        data-testid="tooltip-container"
      />
      <div
        class="c2 c3"
      >
        <div
          class="c4 c5 "
          color="disabled"
        >
          <svg
            data-testid="avatar-icon"
            fill="#DBDBDB"
          />
        </div>
        <div
          class="c6"
        />
      </div>
      <div
        class="c7"
      >
        <a
          class="c8"
          href="/overview"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Overview
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/dashboard"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Dashboard
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/task-management"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Task
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/subject-management"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Subject
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/study-data"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Study Data
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/educational-management"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Education
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/lab-visit"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              In Lab Visit
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/study-settings"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Study Settings
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
        <a
          class="c8"
          href="/data-statistics"
        >
          <div
            class="c9 c10"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Data Statistics
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </a>
      </div>
      <div
        class="c15"
      >
        <div
          class="c7"
        >
          <div
            class="c9 c10"
            data-testid="user-profile-signout-action"
          >
            <div
              class="c11"
            >
              <svg />
            </div>
            <p
              class="c12 c13"
            >
              Sign out
            </p>
            <div
              class="c14"
              color="primaryLightPressed"
              opacity="1,1"
              scale="0"
              style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
            />
          </div>
        </div>
        <div
          class="c16 c17"
        >
          <div
            class="c18"
          />
          <svg />
        </div>
      </div>
    </div>
  </div>
</body>
`;
